# freight-market-sensing

./: .gitignore  README.md  app.py  backtest_metrics.json  feature_history.csv  features_glossary.md  historical_actuals.csv  live_90_day_forecast.csv  pyproject.toml
src/: config.py  data_ingestion.py
src/freight_market_sensing/: data_ingestion.py  feature_analysis.py  features.py  models.py  shap_analysis.py  shap_waterfall.py
src/freight_market_sensing/feature_engineering/: data_ingestion.py  features.py  series.py
src/frontend/: dashboard_tab.py  data_loader.py  explainability_tab.py  sidebar.py
