[project]
name = "freight-market-sensing"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothy Ghrist",email = "tghrist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "shap (>=0.51.0,<0.52.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
